lib/llm/tests/snapshots/openai_completions__minimum_viable_request.snap
---
source: dynemo-llm/tests/openai_completions.rs
expression: request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?"
}
