lib/llm/tests/snapshots/openai_completions__valid_samples-3.snap
---
source: dynemo-llm/tests/openai_completions.rs
description: "should have prompt, model, and temperature fields"
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?",
  "temperature": 0.0
}
