lib/llm/tests/snapshots/openai_completions__valid_samples-7.snap
---
source: dynemo-llm/tests/openai_completions.rs
description: "should have prompt, model, and stop fields"
expression: sample.request
---
{
  "model": "gpt-3.5-turbo",
  "prompt": "What is the meaning of life?",
  "stop": [
    "\n"
  ]
}
